# swerve-sim-container

./: Dockerfile  LICENSE.md  Makefile  README.md
.github/workflows/: deploy-image.yaml
config/: cyclonedds.xml
src/swerve_controller/: .flake8  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
src/swerve_controller/config/: controller.yaml  robot_geometry.yaml
src/swerve_controller/launch/: swerve_control_odom.launch.py
src/swerve_controller/swerve_controller/: swerve_commander.py  swerve_joints.py  swerve_odometer.py
src/swerve_robot_description/: CMakeLists.txt  README.md  package.xml
src/swerve_robot_description/config/: sim_controllers.yaml
src/swerve_robot_description/launch/: description.launch.py
src/swerve_robot_description/meshes/: base_link.dae  front_left_steering_link.dae  front_left_wheel_link.dae  front_right_steering_link.dae  front_right_wheel_link.dae  rear_left_steering_link.dae  rear_left_wheel_link.dae  rear_right_steering_link.dae  rear_right_wheel_link.dae
src/swerve_robot_description/urdf/: swerve_robot.xacro
src/swerve_robot_description/urdf/include/: swerve_robot_base.xacro  swerve_ros2_control.xacro
src/swerve_robot_description/urdf/include/robot_parts/: chassis.xacro  steering.xacro  wheel.xacro
src/swerve_robot_gazebo/: README.md  package.xml  setup.cfg  setup.py
src/swerve_robot_gazebo/config/: xbox_holonomic.config.yaml
src/swerve_robot_gazebo/launch/: sim.launch.py  spawn_swerve_robot.launch.py  teleop_joy.launch.py
