<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>swerve_controller</name>
  <version>0.1.0</version>
  <description>ros controller for swerve drive vehicles</description>

  <maintainer email="robotics@freshconsulting.com">Robotics @ Fresh Consulting</maintainer>

  <license>TODO</license>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
