<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swerve_robot_description</name>
  <version>0.1.0</version>
  <description>Meshes and urdf for a swerve drive robot</description>
  <maintainer email="robotics@freshconsulting.com">Robotics @ Fresh Consulting</maintainer>
  <author email="robotics@freshconsulting.com">Robotics @ Fresh Consulting</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
