<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swerve_robot_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo simulation for swerve robot</description>
  <maintainer email="robotics@freshconsulting.com">Robotics @ Fresh Consulting</maintainer>
  <author email="robotics@freshconsulting.com">Robotics @ Fresh Consulting</author>
  <license>Apache-2.0</license>

  <depend>aws_robomaker_small_warehouse_world</depend>
  <depend>controller_manager</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>ros2launch</depend>
  <depend>swerve_controller</depend>
  <depend>swerve_robot_description</depend>
  <depend>teleop_twist_joy</depend>
  <depend>teleop_twist_keyboard</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
